--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
