--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "recharts": "^2.15.3",
     "styled-components": "^6.1.17",
     "sweetalert2": "^11.19.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
